# banshee

./: .gitattributes  .gitignore  .travis.yml  Banshee.sln  Banshee.sln.DotSettings  Makefile.am  autogen.sh  configure.ac
.github/: CONTRIBUTING.md
data/: Makefile.am  banshee.appdata.xml.in  org.gnome.banshee.gschema.xml.in
data/audio-profiles/: Makefile.am  aac-novell.xml.in  aac.xml.in  flac.xml.in  mp3-lame.xml.in  mp3-xing.xml.in  vorbis.xml.in  wav.xml.in  wavpack.xml.in  wma.xml.in
data/desktop-files/: Makefile.am  common.desktop.in
extras/metrics/: metrics.csproj
its/: addin.its  addin.loc  audioprofile.its  audioprofile.loc
po/: ChangeLog  Makevars  POTFILES.in
src/Backends/Banshee.GStreamer/: Banshee.GStreamer.csproj
src/Backends/Banshee.GStreamerSharp/: Banshee.GStreamerSharp.csproj
src/Backends/Banshee.Gio/: Banshee.Gio.csproj
src/Backends/Banshee.Gnome/: Banshee.Gnome.addin.xml  Banshee.Gnome.csproj
src/Backends/Banshee.Osx/: Banshee.Osx.csproj  Makefile.am
src/Backends/Banshee.Unix/: Banshee.Unix.csproj
src/Backends/Banshee.Windows/: Banshee.Windows.csproj  Makefile.am
src/Clients/Beroe/: Beroe.csproj
src/Clients/Booter/: Booter.csproj
src/Clients/Halie/: Halie.csproj
src/Clients/MediaPanel/: MediaPanel.csproj
src/Clients/Muinshee/: Muinshee.csproj
src/Clients/Nereid/: Nereid.csproj
src/Core/Banshee.CollectionIndexer/: Banshee.CollectionIndexer.csproj
src/Core/Banshee.Core/: Banshee.Core.csproj
src/Core/Banshee.Services/: Banshee.Services.csproj
src/Core/Banshee.ThickClient/: Banshee.ThickClient.csproj  Makefile.am
src/Core/Banshee.WebBrowser/: Banshee.WebBrowser.csproj  Banshee.WebBrowser.dll.config  Makefile.am
src/Core/Banshee.Widgets/: Banshee.Widgets.csproj
src/Dap/Banshee.Dap.AppleDevice/: Banshee.Dap.AppleDevice.csproj
src/Dap/Banshee.Dap.Mtp/: Banshee.Dap.Mtp.csproj
src/Extensions/Banshee.NotificationArea/: Banshee.NotificationArea.csproj  Makefile.am
src/Extensions/Banshee.SoundMenu/: Banshee.SoundMenu.csproj  Makefile.am
src/Libraries/: Makefile.am
(+123 files in other folders)
